# Polybg

./: README.md  main.py  polybg.desktop  polybg.sh  pyproject.toml  setup.sh
examples/: README.md
polybg/: base.py
