[tool.poetry]
name = "polybg"
version = "0.1.0"
description = ""
authors = ["GrandMoff100 <minecraftcrusher100@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
Pillow = "^9.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
